[gd_scene load_steps=7 format=3 uid="uid://dyw0nguciihvd"]

[ext_resource type="Script" path="res://scripts/HUD.gd" id="1_nw6u0"]
[ext_resource type="FontFile" uid="uid://8u0d0bpoe1wf" path="res://fonts/Xolonium-Regular.ttf" id="2_7bn55"]

[sub_resource type="LabelSettings" id="LabelSettings_mg7d1"]
font = ExtResource("2_7bn55")
font_size = 64

[sub_resource type="LabelSettings" id="LabelSettings_dy60g"]
font = ExtResource("2_7bn55")
font_size = 64

[sub_resource type="InputEventAction" id="InputEventAction_6dqcn"]
action = &"shortcut"

[sub_resource type="Shortcut" id="Shortcut_cso2c"]
events = [SubResource("InputEventAction_6dqcn")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_nw6u0")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_top = 24.0
offset_bottom = 105.0
grow_horizontal = 2
text = "0"
label_settings = SubResource("LabelSettings_mg7d1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
text = "Dodge The
Creeps!"
label_settings = SubResource("LabelSettings_dy60g")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Start" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -35.5
offset_top = -126.0
offset_right = 35.5
offset_bottom = -96.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_7bn55")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_cso2c")
text = "Start"
flat = true

[node name="Quit" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -88.5
offset_top = -102.0
offset_right = 88.5
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_7bn55")
theme_override_font_sizes/font_size = 50
shortcut = SubResource("Shortcut_cso2c")
text = "Quit"
flat = true

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
